@@ -71,7 +71,6 @@ sp_desktop_dialog (void)
 	gtk_window_present (GTK_WINDOW (dlg));
 }
 
-#if 0
 static void
 sp_dtw_whatever_toggled (GtkToggleButton *tb, GtkWidget *dialog)
 {
@@ -93,7 +92,6 @@ sp_dtw_whatever_toggled (GtkToggleButton *tb, GtkWidget *dialog)
 	sp_repr_set_boolean (repr, key, gtk_toggle_button_get_active (tb));
 	sp_document_set_undo_sensitive (doc, TRUE);
 }
-#endif
 
 static void
 sp_dtw_border_layer_toggled (GtkToggleButton *tb, GtkWidget *dialog)
@@ -187,8 +185,6 @@ sp_desktop_dialog_new (void)
 	GCallback cb;
 	int row;
 
-	cb = G_CALLBACK(sp_dtw_whatever_changed);
-
 	dialog = sp_window_new (_("Desktop settings"), FALSE);
 
 	nb = gtk_notebook_new ();
@@ -209,6 +205,8 @@ sp_desktop_dialog_new (void)
 
 	/* Checkbuttons */
 	row = 0;
+	cb = G_CALLBACK(sp_dtw_whatever_toggled);
+
 	spw_checkbutton(dialog, t, _("Show grid"), "showgrid", 0, row, 0, cb);
 	spw_checkbutton(dialog, t, _("Snap to grid"), "snaptogrid", 1, row++, 0, cb);
 
@@ -217,6 +215,8 @@ sp_desktop_dialog_new (void)
 
 	spw_checkbutton(dialog, t, _("Iso grid"), "isogrid", 0, row, 0, cb);
 	spw_checkbutton(dialog, t, _("Hex grid"), "hexgrid", 1, row++, 0, cb);
+
+	cb = G_CALLBACK(sp_dtw_whatever_changed);
 
 	us = sp_unit_selector_new (SP_UNIT_ABSOLUTE);
 	spw_dropdown(dialog, t, _("Grid units:"), "grid_units", row++, us);
@@ -232,6 +232,7 @@ sp_desktop_dialog_new (void)
 			  G_CALLBACK (sp_dtw_whatever_changed));
 
  	us = sp_unit_selector_new (SP_UNIT_ABSOLUTE | SP_UNIT_DEVICE);
+	spw_dropdown(dialog, t, _("Snap units:"), "grid_snap_units", row++, us);
 	
 	spw_unit_selector(dialog, t, _("Snap distance:"), "gridtolerance", row++, us,
 			  G_CALLBACK (sp_dtw_grid_snap_distance_changed) );
@@ -250,8 +251,12 @@ sp_desktop_dialog_new (void)
 	gtk_table_set_col_spacings (GTK_TABLE (t), 4);
 	gtk_notebook_append_page (GTK_NOTEBOOK (nb), t, l);
 
+	cb = G_CALLBACK(sp_dtw_whatever_toggled);
+
 	spw_checkbutton(dialog, t, _("Show guides"), "showguides", 0, row, 1, cb);
 	spw_checkbutton(dialog, t, _("Snap to guides"), "snaptoguides", 1, row++, 0, cb);
+
+	cb = G_CALLBACK(sp_dtw_whatever_changed);
 
 	us = sp_unit_selector_new (SP_UNIT_ABSOLUTE | SP_UNIT_DEVICE);
 	spw_dropdown(dialog, t, _("Snap units:"), "guide_snap_units", row++, us);
@@ -275,6 +280,8 @@ sp_desktop_dialog_new (void)
 	gtk_table_set_row_spacings (GTK_TABLE (t), 4);
 	gtk_table_set_col_spacings (GTK_TABLE (t), 4);
 	gtk_notebook_append_page (GTK_NOTEBOOK (nb), t, l);
+
+	cb = G_CALLBACK(sp_dtw_whatever_toggled);
 
 	spw_checkbutton(dialog, t, _("Show border"), "showborder", 0, row, 0, cb);
 
