@@ -1,3 +1,7 @@
+2003-11-10  Lauris Kaplinski  <lauris@kaplinski.com>
+
+	* src/libnr/nr-pathops.c: Handful of new code
+
 2003-11-08  Mitsuru Oka  <oka326@parkcity.ne.jp>
 
 	* src/document.h: (SP_VERSION_*): Moved from sp-object.h again
